--- a/dailyfresh/templates/df_user/login.html
+++ b/dailyfresh/templates/df_user/login.html
@@ -2,13 +2,55 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
-	<title>天天生鲜-登录</title>
-	<link rel="stylesheet" type="text/css" href="css/reset.css">
-	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<title>天天生鲜-{{title}}</title>
+	<link rel="stylesheet" type="text/css" href="/static/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="/static/css/main.css">
+	<script type="text/javascript" src="/static/js/jquery-1.12.4.min.js"></script>
+	<script type="text/javascript">
+		$(function () {
+			var name_error=false;
+			var pwd_error=false;
+			if({{error_name}}==1){
+			    $('.user_error').html('用户名错误').show()
+			}
+
+			if({{error_pwd}}==1){
+			    $('.pwd_error').html('密码错误').show()
+			}
+
+			$('.name_input').blur(function () {
+				if($('.name_input').val().length==0){
+				    $('.user_error').html('请填写用户名').show();
+					name_error=false;
+				}
+				else {
+				    $('.user_error').hide();
+				    name_error=true;
+				}
+            });
+			$('.pass_input').blur(function () {
+                if($('.pass_input').val().length==0){
+                    $('.pwd_error').html('请输入密码').show();
+                    pwd_error=false;
+                }else {
+                    $('.pwd_error').hide();
+                    pwd_error=true;
+                }
+            });
+			$('.rsform').submit(function ()  {
+                if(name_error==true && pwd_error==true){
+                    return true
+                }
+                else {
+                    return false
+                }
+            });
+        });
+	</script>
 </head>
 <body>
 	<div class="login_top clearfix">
-		<a href="index.html" class="login_logo"><img src="images/logo02.png"></a>	
+		<a href="index.html" class="login_logo"><img src="/static/images/logo02.png"></a>
 	</div>
 
 	<div class="login_form_bg">
@@ -18,16 +60,17 @@
 			<div class="login_form fr">
 				<div class="login_title clearfix">
 					<h1>用户登录</h1>
-					<a href="#">立即注册</a>
+					<a href="/user/register/">立即注册</a>
 				</div>
 				<div class="form_input">
-					<form>
-						<input type="text" name="username" class="name_input" placeholder="请输入用户名">
-						<div class="user_error">输入错误</div>
-						<input type="password" name="pwd" class="pass_input" placeholder="请输入密码">
-						<div class="pwd_error">输入错误</div>
+					<form action="/user/login_handle/" method="post" class="rsform">
+						{%csrf_token%}
+						<input type="text" name="username" class="name_input"  placeholder="请输入用户名">
+						<div class="user_error" id="user_error">输入错误</div>
+						<input type="password" name="pwd" class="pass_input"  placeholder="请输入密码">
+						<div class="pwd_error" id="pwd_error">输入错误</div>
 						<div class="more_input clearfix">
-							<input type="checkbox" name="">
+							<input type="checkbox" name="jizhu" value="1" checked="checked">
 							<label>记住用户名</label>
 							<a href="#">忘记密码</a>
 						</div>
@@ -46,11 +89,11 @@
 			<span>|</span>
 			<a href="#">招聘人才</a>
 			<span>|</span>
-			<a href="#">友情链接</a>		
+			<a href="#">友情链接</a>
 		</div>
 		<p>CopyRight © 2016 北京天天生鲜信息技术有限公司 All Rights Reserved</p>
 		<p>电话：010-****888    京ICP备*******8号</p>
 	</div>
-	
+
 </body>
 </html>
