--- a/dailyfresh/templates/df_user/user_center_order.html
+++ b/dailyfresh/templates/df_user/user_center_order.html
@@ -1,5 +1,14 @@
 {%extends 'base.html'%}
 {%block right%}
+<div class="main_con clearfix">
+		<div class="left_menu_con clearfix">
+			<h3>用户中心</h3>
+			<ul>
+				<li><a href="/user/info" >· 个人信息</a></li>
+				<li><a href="/user/order/" class="active">· 全部订单</a></li>
+				<li><a href="/user/site/">· 收货地址</a></li>
+			</ul>
+		</div>
 		<div class="right_content clearfix">
 				<h3 class="common_title2">全部订单</h3>
 				<ul class="order_list_th w978 clearfix">
@@ -71,5 +80,5 @@
 					<a href="#">下一页></a>
 				</div>
 		</div>
+</div>
 {%endblock right%}
-
