--- a/dailyfresh/templates/base.html
+++ b/dailyfresh/templates/base.html
@@ -1,23 +1,27 @@
 {%extends 'base_foot.html'%}
 {%block body%}
-<body>
 	<div class="header_con">
 		<div class="header">
 			<div class="welcome fl">欢迎来到天天生鲜!</div>
 			<div class="fr">
-				<div class="login_info fl">
-					欢迎您：<em>张 三</em>
-				</div>
+				{%if request.session.user_name|default:'' != ''%}
 				<div class="login_btn fl">
-					<a href="login.html">登录</a>
+					欢迎您：<em>{{request.session.user_name}}</em>
 					<span>|</span>
-					<a href="register.html">注册</a>
+					<a href="/user/logout/">退出</a>
 				</div>
+				{%else%}
+				<div class="login_btn fl">
+					<a href="/user/login/">登录</a>
+					<span>|</span>
+					<a href="/user/register/">注册</a>
+				</div>
+				{%endif%}
 				<div class="user_link fl">
 					<span>|</span>
-					<a href="user_center_info.html">用户中心</a>
+					<a href="/user/info">用户中心</a>
 					<span>|</span>
-					<a href="cart.html">我的购物车</a>
+					<a href="/cart/">我的购物车</a>
 					<span>|</span>
 					<a href="user_center_order.html">我的订单</a>
 				</div>
@@ -27,22 +31,24 @@
 
 	<div class="search_bar clearfix">
 		<a href="index.html" class="logo fl"><img src="/static/images/logo.png"></a>
-		<div class="sub_page_name fl">|&nbsp;&nbsp;&nbsp;&nbsp;用户中心</div>
+	{%if page_name == 1%}
+		<div class="sub_page_name fl">|&nbsp;&nbsp;&nbsp;&nbsp;{{title}}</div>
 		<div class="search_con fr">
 			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
 			<input type="button" class="input_btn fr" name="" value="搜索">
 		</div>
-	</div>
+	{%endif%}
 
-	<div class="main_con clearfix">
-		<div class="left_menu_con clearfix">
-			<h3>用户中心</h3>
-			<ul>
-				<li><a href="/user/info" class="active">· 个人信息</a></li>
-				<li><a href="/user/order/" >· 全部订单</a></li>
-				<li><a href="/user/site/">· 收货地址</a></li>
-			</ul>
+	{%if guest_cart == 1%}
+		<div class="search_con fl">
+			<input type="text" class="input_text fl" name="" placeholder="搜索商品">
+			<input type="button" class="input_btn fr" name="" value="搜索">
+		</div>
+		<div class="guest_cart fr">
+			<a href="#" class="cart_name fl">我的购物车</a>
+			<div class="goods_count fl" id="show_count">1</div>
+		</div>
+	{%endif%}
 		</div>
 		{%block right%}{%endblock right%}
-	</div>
 {%endblock body%}
