--- a/dailyfresh/templates/df_user/user_center_site.html
+++ b/dailyfresh/templates/df_user/user_center_site.html
@@ -1,5 +1,14 @@
 {%extends 'base.html'%}
 {%block right%}
+<div class="main_con clearfix">
+		<div class="left_menu_con clearfix">
+			<h3>用户中心</h3>
+			<ul>
+				<li><a href="/user/info" >· 个人信息</a></li>
+				<li><a href="/user/order/" >· 全部订单</a></li>
+				<li><a href="/user/site/" class="active">· 收货地址</a></li>
+			</ul>
+		</div>
 		<div class="right_content clearfix">
 				<h3 class="common_title2">收货地址</h3>
 				<div class="site_con">
@@ -33,4 +42,5 @@
 					</form>
 				</div>
 		</div>
+</div>
 {%endblock right%}
