--- a/dailyfresh/templates/df_goods/index.html
+++ b/dailyfresh/templates/df_goods/index.html
@@ -79,7 +79,7 @@
 				<a href="/{{g.id}}/">{{g.gtitle|slice:'10'}}...</a>
 				{%endfor%}
 			</div>
-			<a href="#" class="goods_more fr">查看更多 ></a>
+			<a href="list2_1_1/" class="goods_more fr">查看更多 ></a>
 		</div>
 
 		<div class="goods_con clearfix">
@@ -105,7 +105,7 @@
 				<a href="/{{g.id}}/">{{g.gtitle|slice:'10'}}...</a>
 				{%endfor%}
 			</div>
-			<a href="#" class="goods_more fr">查看更多 ></a>
+			<a href="list3_1_1/" class="goods_more fr">查看更多 ></a>
 		</div>
 
 		<div class="goods_con clearfix">
@@ -131,7 +131,7 @@
 				<a href="/{{g.id}}/">{{g.gtitle|slice:'10'}}...</a>
 				{%endfor%}
 			</div>
-			<a href="#" class="goods_more fr">查看更多 ></a>
+			<a href="list4_1_1/" class="goods_more fr">查看更多 ></a>
 		</div>
 
 		<div class="goods_con clearfix">
@@ -157,7 +157,7 @@
 				<a href="/{{g.id}}/">{{g.gtitle|slice:'10'}}...</a>
 				{%endfor%}
 			</div>
-			<a href="#" class="goods_more fr">查看更多 ></a>
+			<a href="list5_1_1" class="goods_more fr">查看更多 ></a>
 		</div>
 
 		<div class="goods_con clearfix">
@@ -183,7 +183,7 @@
 				<a href="/{{g.id}}/">{{g.gtitle|slice:'10'}}...</a>
 				{%endfor%}
 			</div>
-			<a href="#" class="goods_more fr">查看更多 ></a>
+			<a href="list6_1_1" class="goods_more fr">查看更多 ></a>
 		</div>
 
 		<div class="goods_con clearfix">
